# PersonalAgents

./: .devdbrc  .gitignore  .mcp.json  .zshrc.updated  CLAUDE.md  README.md  TODO.md  VERIFICATION.md  VERIFICATION_SUMMARY.md  agent.py  cli_tools_path_analysis.md  com.user.chrome-health-monitor.plist  debug-screen-behavior.sh  debug-screen-directory.sh  graph_halaqa.py  kalaam_donation_breakdown_email.txt  kalaam_donation_breakdown_report_may2025.md  may_13_2025_main.py  may_22_2025_agent.py  may_27_2025_README.md  mcp.json  mpyre_processing_log.txt  package-lock.json  package.json  parse_play_report.py  phonebook.json  project_code_summary.md  requirements.txt  run_halaqa.py  system_info_printer.py  test-final-fix.sh  test-monitor-task-announcement.txt  test-screen-dir.sh  test-shell-fix.sh  test-tmux-claude-workflow.sh  test-vscode-applescript.sh  test-vscode-screen-e2e.sh  test_direct_detection.py  test_manual_workflow.sh  test_output.txt  (+2 more)
.cursor/: mcp.json
agents/: halaqa_agent.py  may_13_2025_halaqa_agent.py  may_15_2025_weather_agent.py
bankScraper/: package-lock.json  package.json  scraper.js
chats/: cursor_account_statement_download_reque.md  cursor_booking_adhd_appointment_follow.md  cursor_continue_fixing_playwright_mcp_t.md  cursor_innovative_quran_understanding_a.md  cursor_install_browser_use_from_github.md  cursor_refactor_ai_response_generation.md  fixing_playwright_mcp.md
cli_tools/: CLI_TOOL_DESIGN_GUIDE.md  README.md
cli_tools/desktop-automation-cli/: CURSOR_AGENT_INSTRUCTIONS.md  Cargo.toml  README.md  automation  desktop-automation-cli
(+593 files in other folders)
