[package]
name = "computer-use-cli"
version = "0.1.0"
edition = "2021"
description = "Desktop UI automation CLI through accessibility APIs"
authors = ["m13v, louis030195"]
repository = ""

[dependencies]
# General dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.19"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
accessibility-sys = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
accessibility = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
objc = "0.2.7"
objc-foundation = "0.1.1"
core-foundation = "0.10.0"
core-graphics = { version = "0.24.0", features = ["highsierra"] }

# Add Windows dependencies if needed
[target.'cfg(target_os = "windows")'.dependencies]
# windows crate with relevant features (if used)

# Add Linux dependencies if needed
[target.'cfg(target_os = "linux")'.dependencies]
# dbus, atspi, etc. (if used)

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[features]
cargo-clippy = []
